prop-types added

--- a/freecodecamp-weather-app/src/sass/main.scss
+++ b/freecodecamp-weather-app/src/sass/main.scss
@@ -1,3 +1,9 @@
+@import "./components/currentWeather.scss";
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .container{
     max-width: 1080px;
     margin:  20px auto;
