--- a/freecodecamp-weather-app/src/App.css
+++ b/freecodecamp-weather-app/src/App.css
@@ -1,3 +1,64 @@
+.weather {
+  width: 300px;
+  border-radius: 6px;
+  box-shadow: 10px -2px 20px 2px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  background-color: #333;
+  margin: 20px auto 0 auto;
+  padding: 0px 20px 20px 20px;
+}
+.weather .top, .weather .bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.weather .city {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1;
+  margin: 0;
+  letter-spacing: 1px;
+}
+.weather .weather-description {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1;
+  margin: 0;
+}
+.weather .weather-icon {
+  width: 100px;
+}
+.weather .temperature {
+  font-weight: 600;
+  font-size: 70px;
+  width: auto;
+  letter-spacing: -5px;
+  margin: 10px 0;
+}
+.weather .details {
+  width: 100%;
+  padding-left: 20px;
+}
+.weather .parameter-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.weather .parameter-label {
+  text-align: left;
+  font-weight: 400;
+  font-size: 12px;
+}
+.weather .parameter-value {
+  text-align: right;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .container {
   max-width: 1080px;
   margin: 20px auto;
